--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,8 @@ android {
 
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.android.volley:volley:1.2.1'
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation libs.appcompat
     implementation libs.material
