--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,9 @@ android {
 dependencies {
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.android.volley:volley:1.2.1'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation 'androidx.work:work-runtime:2.7.1'
+    implementation 'com.airbnb.android:lottie:3.7.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation libs.appcompat
