--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,27 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-    
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
 
     <application
+        android:name=".Activities.ApplicationClass"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/main_logo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/main_logo"
         android:supportsRtl="true"
         android:theme="@style/Theme.MagentaStreaming"
         tools:targetApi="31">
         <activity
-            android:name=".AppHolder"
+            android:name=".Activities.Login"
             android:exported="false" />
         <activity
-            android:name=".Register"
+            android:name=".Activities.AppHolder"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".Activities.Register"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,20 +34,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
-            android:name=".PlayerActivity"
+            android:name=".Activities.PlayerActivity"
             android:exported="false" />
-
         <activity
             android:name=".MainActivity"
+            android:exported="false"/>
+
+        <service
+            android:name=".Activities.MusicService"
+            android:enabled="true" />
+
+        <receiver
+            android:name=".Activities.NotificationReceiver"
+            android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="NEXT" />
+                <action android:name="PREVIOUS" />
+                <action android:name="PLAY" />
             </intent-filter>
-        </activity>
+        </receiver>
     </application>
 
 </manifest>
