--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.work:work-runtime:2.7.1'
     implementation 'com.airbnb.android:lottie:3.7.0'
+    implementation 'com.google.code.gson:gson:2.8.8'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation libs.appcompat
