--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'com.airbnb.android:lottie:3.7.0'
     implementation 'com.google.code.gson:gson:2.8.8'
 
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
+
+
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation libs.appcompat
     implementation libs.material
